@@ -56,6 +56,12 @@ sub isContainer
     return 1;
 }
 
+sub printableType
+{
+    return __('Organization Unit');
+}
+
+
 # Method: name
 #
 #   Return the name of this OU.
